# accessible-outings

./: .env.example  .gitignore  CLAUDE.md  OVERVIEW.md  README.md  Suggestions.txt  app.py  clean.sh  debug_deploy.sh  justfile  reset_and_start.sh  restart.sh  ultimate_tests.py  unit_tests.py  version.json  version.py  zip-it.sh
apps/myapp/: .dockerignore  .env.example  DEPLOYMENT.md  Dockerfile  QUICK_START.md  README.md  RunNotes  Suggestions.txt  add_debug_auth.py  add_experience_columns.py  app.py  audit_data_sources.py  audit_report.json  build_docker.sh  config.py  create_admin_user.py  create_boston_events.py  db_migration.py  debug_auth.py  debug_auth_info.py  debug_flask_auth.py  docker_launch.sh  docker_run_tests.sh  fix_venue_addresses.py  justfile  monitor_data_integrity.py  pyproject.toml  requirements.txt  reset_and_start.sh  reset_categories.py  run_tests.sh  simple_password_fix.py  simple_unit_tests.py  test_comprehensive.py  test_exact_auth.py  test_flask_auth.py  test_login_form.html  unit_tests.py  update_admin_password_direct.py  validate_app.py  (+3 more)
apps/myapp/admin-tools/: README.md  clean_admin_setup.py  create_admin_user.py  create_sample_events.py  db_migration.py  final_admin_fix.py  fix_admin_password.py  fix_admin_password_final.py  fix_categories.py  fix_cities.py  reset_categories.py  reset_database_fresh.py  simple_password_fix.py  test_eventbrite_api.py  update_admin_password_direct.py  update_events_schema.py  update_venue_categories.py  update_venue_experiences.py  user_manager.py  verify_admin_setup.py
apps/myapp/database/: schema.sql  (+1 more)
(+67 files in other folders)
